<resources>
    <string name="app_name">Kaloriku</string>
    <string name="kaloriku">KALORIKU</string>
    <string name="Loginsuruh">Login to Your cccount</string>
    <string name="create_an_account">Create an account</string>
    <string name="hint_email">email@domain.com</string>
    <string name="tv_enter_email">Enter your email to sign up for this app</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="or_continue_with">or continue with</string>
    <string name="login_with_email">Login with Email</string>
    <string name="google">Google</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="register_here">Register here</string>
    <string name="dont_have_an_account">Don\'t have an account yet?</string>
    <string name="login">Login</string>
    <string name="register_your_account">Register your account</string>
    <string name="birthdate">Birth Date</string>
    <string name="logout">Logout</string>
    <string name="bmistatus">Underweight</string>
    <string name="message_main_page">Welcome to Kaloriku</string>
    <string name="input_physical_data">Input Physical Data</string>
    <string name="please_input_your_physical_data">Please input your physical data</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="kgbmi">kg/m2</string>
    <string name="birthdate_yyyy_mm_dd">Birthdate (yyyy-mm-dd)</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="kcal_left_number">0000</string>
    <string name="your_current_bmi">Your Current BMI</string>
    <string name="kcal_left">Kcal Left</string>
    <string name="kcal">Kcal</string>
    <string name="eaten">Eaten</string>
    <string name="calories_value">Wow so much value</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progress">Progress</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">PROFILE</string>
    <string name="home">Home</string>
    <string name="profile_image">Profile Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="age">Age</string>
    <string name="edit">Edit</string>
    <string name="birth">Birth</string>
    <string name="name">Name</string>
    <string name="bmi_caclulation">00.0</string>
    <string name="history">History</string>
    <string name="image_recognation">Image Recognation</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="open_camera">Open Camera</string>
    <string name="gallery">gallery</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="food_and_drinks_recognition">Food and Drinks Recognition</string>
    <string name="camera">Camera</string>
    <string name="profile_lowercase">Profile</string>
    <string name="goal">Goal</string>
    <string name="add_food">Add Food</string>
    <string name="calories_0_kcal">Calories: 0 kcal</string>
    <string name="food_name">Food Name</string>
    <string name="food_image">Food Image</string>
    <string-array name="goal_options">
        <item>Maintain</item>
        <item>Increase</item>
        <item>Decrease</item>
    </string-array>
</resources>