<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/foodImageView"
        android:contentDescription="@string/food_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@drawable/recommendfoodbackground" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/foodNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/food_name" />

        <TextView
            android:id="@+id/caloriesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:text="@string/calories_0_kcal" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_plus"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/add_food" />

</LinearLayout>