<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.DashboardFragment"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/kaloriku"
        android:layout_width="171dp"
        android:layout_height="34dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_text"
        android:hint="@string/food_and_drinks_recognition"
        android:layout_width="363dp"
        android:layout_height="131dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/result"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="20dp"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/cameraButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="366dp"
        android:layout_height="390dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/chooseimage"
        app:layout_constraintBottom_toTopOf="@+id/galleryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.125"
        android:contentDescription="@string/image_placeholder" />

    <ImageView
        android:id="@+id/cameraButton"
        android:layout_width="51dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/purple"
        android:src="@drawable/addphoto"
        android:text="@string/open_camera"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949"
        android:contentDescription="@string/open_camera" />

    <ImageView
        android:id="@+id/galleryButton"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/purple"
        android:src="@drawable/gallery"
        android:text="@string/gallery"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cameraButton"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/open_gallery" />


</androidx.constraintlayout.widget.ConstraintLayout>